[package]
name = "zelkova-lang"
version = "0.1.0"
authors = ["François Monniot <francoismonniot@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies] # <-- We added this and everything after!
lalrpop = "0.19.1"

[dependencies]
log = "0.4"
codespan = "0.9"
codespan-reporting = "0.9"
env_logger = "0.8"
unic-ucd-category = "0.9"
lalrpop-util = "0.19.1"
walkdir = "2.3"
petgraph = "0.5"

[dev-dependencies]
indoc = "1.0"
