[package]
name = "zelkova-lang"
version = "0.1.0"
authors = ["François Monniot <francoismonniot@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = "0.22.1"

[dependencies]
log = "0.4"
codespan-reporting = "0.12"
env_logger = "0.11"
unic-ucd-category = "0.9"
lalrpop-util = "0.22.1"
walkdir = "2.5"
petgraph = "0.7"

[dev-dependencies]
indoc = "2.0"
